# prophetic-emergentomics

./: .env.example  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: index.html
docs/data/: emergence-data.json
examples/: quickstart.py
observable/: prophetic-emergentomics.ojs
src/emergentomics/: __init__.py  cli.py
src/emergentomics/cag/: __init__.py  context_builder.py  engine.py  prompts.py
src/emergentomics/core/: __init__.py  config.py  models.py
src/emergentomics/detection/: __init__.py  anomaly.py  clustering.py  emergence.py
src/emergentomics/gdelt/: __init__.py  client.py  collectors.py  parsers.py
src/emergentomics/intelligence/: __init__.py  detector.py
src/emergentomics/medallion/: __init__.py  pipeline.py  storage.py
src/emergentomics/patterns/: __init__.py  emergence.py
src/emergentomics/synthesis/: __init__.py  engine.py
src/emergentomics/utils/: __init__.py  logging.py
tests/: __init__.py  test_core.py
