[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prophetic-emergentomics"
version = "0.1.0"
description = "ML/DL-driven emergence detection in complex economic systems with GDELT behavioral data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vanessa Beck", email = "stochastic-sisyphus@users.noreply.github.com"}
]
keywords = [
    "economics",
    "emergence",
    "complexity",
    "machine-learning",
    "anomaly-detection",
    "clustering",
    "GDELT",
    "graph-neural-networks",
    "time-series",
    "reinforcement-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.10"
dependencies = [
    # Core data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "polars>=0.20.0",

    # ML/DL core
    "scikit-learn>=1.4.0",

    # HTTP and API clients (for GDELT)
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",

    # Data storage and caching
    "diskcache>=5.6.0",
    "duckdb>=0.10.0",

    # Async utilities
    "asyncio-throttle>=1.0.0",

    # Configuration and validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",

    # Date/time handling
    "python-dateutil>=2.8.0",

    # Network analysis
    "networkx>=3.2.0",

    # Visualization
    "plotly>=5.18.0",

    # Logging and CLI
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
ml-full = [
    # Deep learning
    "torch>=2.2.0",
    # Advanced clustering
    "hdbscan>=0.8.33",
    # Dimensionality reduction
    "umap-learn>=0.5.5",
    # Graph neural networks
    "torch-geometric>=2.4.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/stochastic-sisyphus/prophetic-emergentomics"
Repository = "https://github.com/stochastic-sisyphus/prophetic-emergentomics"
Issues = "https://github.com/stochastic-sisyphus/prophetic-emergentomics/issues"

[project.scripts]
emergentomics = "emergentomics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=emergentomics --cov-report=term-missing"
